--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 </div>
                 <div class="quantity">
                     <h1>CART</h1>
+                    <div class="emptymsg"><p>No Product Added To The Cart</p></div>
                     <div class="qty-container"></div>
                     <div class="total">
                         <h1>TOTAL</h1>
